--- a/index.html
+++ b/index.html
@@ -6,13 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
-    
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4221/4221419.png" type="image/icon type">
 
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4221/4221419.png" type="image/icon type">
 </head>
 <body>
 
-    <nav>av</nav>
+    <div class="topd">
+
+        <div style="width: 110px ; height: 150px ;">
+        <img style="width: 100px ; height: 100px; padding-left: 15px; padding-top: 15px;" src="./Asstes/movie_icon.png" alt="logo">
+        <h2 style="text-align: center ; padding-left: 18px;">film.it</h2>
+    </div>
+
+        <a style="margin-left: 1000px;" href="#drama">Drama</a>
+        <a style="margin-left: 20px;" href="#animated">Animated</a>
+        <a style="margin-left: 20px;" href="#action">Action</a>
+    </div>
+
+
+    <div class="cont">
+
+        <div class="card">
+            <img src="./Asstes/Interstellar.jpg" alt="">
+            <h2>Interstellar</h2>
+            <h4></h4>
+        </div>
+
+        <div class="card">
+            <img src="./Asstes/topgun.jpg" alt="">
+            <h2>Top gun</h2>
+            <h4></h4>
+        </div>
+
+        <div class="card">
+            <img src="./Asstes/salt.jpg" alt="">
+            <h2>salt</h2>
+            <h4></h4>
+        </div>
+    </div>
     
 </body>
 </html>
