--- a/index.html
+++ b/index.html
@@ -12,39 +12,151 @@
 </head>
 <body>
 
-    <div class="topd">
+    <nav id="top">
 
-        <div style="width: 110px ; height: 150px ;">
+        <div style=" width: 110px ; height: 150px ;">
         <img style="width: 100px ; height: 100px; padding-left: 15px; padding-top: 15px;" src="./Asstes/movie_icon.png" alt="logo">
         <h2 style="text-align: center ; padding-left: 18px;">film.it</h2>
     </div>
 
+    <div style=" display: flex; justify-items: center;">
         <a style="margin-left: 1000px;" href="#drama">Drama</a>
-        <a style="margin-left: 20px;" href="#animated">Animated</a>
+        <a style="margin-left: 20px;" href="#anim">Animated</a>
         <a style="margin-left: 20px;" href="#action">Action</a>
     </div>
+</nav>
 
 
+
+
+
+
+
+<div>
+
+    <h1 id="action">Action</h1>
     <div class="cont">
 
-        <div class="card">
-            <img src="./Asstes/Interstellar.jpg" alt="">
-            <h2>Interstellar</h2>
-            <h4></h4>
+        <div id="test" class="card">
+            <div class="front">
+                <div class="back">
+                    <p style="color: white ;">Stars <br>
+                        Matthew McConaughey . Anne Hathaway . Jessica Chastain</p>
+                </div>
+            <img class="immg" src="./Asstes/Interstellar.jpg" alt="pic">
+            <h2 class="col">Interstellar</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+                <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+                <h3 style="color: green; ">8.6</h3>
+            </div>
+        </div>
         </div>
 
         <div class="card">
-            <img src="./Asstes/topgun.jpg" alt="">
-            <h2>Top gun</h2>
-            <h4></h4>
+            <img class="immg" src="./Asstes/topgun.jpg" alt="pic">
+            <h2 class="col">Top gun</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+                <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+                <h3 style="color: green; ">8.4</h3>
+            </div>
         </div>
 
         <div class="card">
-            <img src="./Asstes/salt.jpg" alt="">
-            <h2>salt</h2>
-            <h4></h4>
+            <img class="immg" src="./Asstes/salt.jpg" alt="pic">
+            <h2 class="col">salt</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+            <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+            <h3 style="color: orange; ">6.4</h3>
+        </div>
         </div>
     </div>
+
+    <h1 id="anim">Animated</h1>
+
+    <div style="margin-top:40px ;" class="cont">
+
+        <div class="card">
+            <img class="immg" src="./Asstes/zootopia.jpg" alt="pic">
+            <h2 class="col">zootopia</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+                <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+                <h3 style="color: green; ">8.0</h3>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="immg" src="./Asstes/wishdragon.jpg" alt="pic">
+            <h2 class="col">Wish dragon</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+                <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+                <h3 style="color: yellowgreen; ">7.2</h3>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="immg" src="./Asstes/badguys.jfif" alt="pic">
+            <h2 class="col">Bad guys</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+            <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+            <h3 style="color: orange; ">6.8</h3>
+        </div>
+        </div>
+
+    </div>
+
+    <h1 id="drama">Drama</h1>
+
+
+    <div style="margin-top:40px ;" class="cont">
+
+        <div class="card">
+            <img class="immgg" src="./Asstes/toscana.jpg" alt="pic">
+            <h2 class="col">toscana</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+                <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+                <h3 style="color: orangered; ">5.7</h3>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="immg" src="./Asstes/fatherhood.jpg" alt="pic">
+            <h2 class="col">FatherHood</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+                <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+                <h3 style="color: orange; ">6.6</h3>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="immg" src="./Asstes/bajrangi_bhaijaan.jpg" alt="pic">
+            <h2 class="col">bajrangiBhaijaan</h2>
+
+            <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
+            <img style=" width: 20px; height: 20px;" src="./Asstes/star.png" alt="star">
+            <h3 style="color: green; ">8.1</h3>
+        </div>
+        </div>
+
+    </div>
+
+</div>
+
+
+
+<footer>
+    <p>Copyright © 2022 all rights reserved
+
+        <a href="#top">
+    <button><img src="https://cdn-icons-png.flaticon.com/128/64/64797.png" alt=""></button></a></p>
+    </footer>
     
 </body>
 </html>
